Fixing the spacing on the other webpage

--- a/static/style.css
+++ b/static/style.css
@@ -207,7 +207,7 @@ h4{
 }
 
 #graph3{
-    grid-row: 7/12;
+    grid-row: 6/12;
     grid-column: 4/10;
 }
 
